Bug 807012 - Signaling - reorder initiialization of CallControlManagerImpl r=jesup